Fix new pipe error, closes #234

--- a/05-infer/02-lesson/05-02-lesson.Rmd
+++ b/05-infer/02-lesson/05-02-lesson.Rmd
@@ -267,7 +267,7 @@ We can exclude the missing data by calling `na.omit`:
 
 ```{r ex1-naomit, exercise=TRUE}
 gss2016_completecases <- gss2016 |>
-                          na.omit
+                          na.omit()
 # Using `gss2016`, plot postlife
 ggplot(gss2016_completecases, aes(x = postlife)) +
   # Add bar layer
